# gamercenter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  nuxt.config.js  package.json  package.prod.json  server.js  webpack.config.js
battlesnake/: .eslintrc.yml  .gitignore  Cargo.toml  README.md  index.js  index.mjs  package.json  tsconfig.json
battlesnake/.github/workflows/: node.js.yml
battlesnake/old/: package.json
battlesnake/old/src/: app.js  players.js  players.spec.js  rooms.js  rooms.spec.js
battlesnake/old/src/routes/: rooms.js
battlesnake/old/src/util/: date.js  expressLog.js  expressLog.spec.js  (+2 more)
battlesnake/old/tests/: game.spec.js  rooms.spec.js
battlesnake/src/: app.js  app.ts  index.js  index.spec.js  index.ts  io.js  io.ts  main.rs  players.js  players.spec.js  rooms.js  rooms.spec.js  types.rs
battlesnake/src/io/: battlesnake.js
battlesnake/src/namespaces/: hello.js
battlesnake/src/routes/: game.rs  mod.rs  rooms.js  rooms.rs  rooms.ts
battlesnake/src/store/: rooms.spec.ts  rooms.ts
battlesnake/src/types/: data.ts  game.ts  joinData.ts  mod.rs  player.rs  player.spec.ts  player.ts  room.rs  room.spec.ts  room.ts  rooms.rs  sanitizedPlayer.spec.ts  sanitizedPlayer.ts  sanitizedRoom.spec.ts  sanitizedRoom.ts
battlesnake/src/util/: date.spec.js  expressLog.js  expressLog.spec.js  getJS.js  getJS.spec.js  id.js  id.spec.js  log.js  log.spec.js  socketIOLog.js
battlesnake/test/: game.spec.ts  index.spec.ts  rooms.spec.ts  test.spec.js
battlesnake/tests/: game.spec.js  rooms.rooms.spec.js  rooms.spec.js
(+163 files in other folders)
