[package]
name = "battlesnake-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = "1.0.136"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "uuid", "secrets"]

[dependencies.tokio]
version = "1.17.0"
features = ["sync"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]
